@@ -2,6 +2,12 @@ CHANGELOG
 
 When		Who		What
 ======================================================================================
+2017-02-05 	Richard Forth   Moved all the github messaging into comments
+				at the top of the file, rather than in output.
+2017-02-05 	Richard Forth   Added wiki page and better documentation and
+				error messaging around the parent PID, if the
+				script exists because it is greater than 50MB
+				- addresses issue #110
 2017-02-03 	Richard Forth   Changed the logo for a more subtle and
 				professional, simple, and clean look.
 2017-01-28 	Richard Forth   Fixed #102 rpm error on ubuntu systems.
